# cart-pole

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CNAME  Dockerfile  README.md  __main__.py  brain_controller.proto  calibration_demo.ipynb  collector.py  controller.py  ddpg.py  default_config.yaml  docker-compose.yaml  interface.py  kill_me_pls.mcap  kinda_works.mcap  main.py  mkdocs.yml  out_of_bounds.mcap  platformio.ini  position_control_demo.ipynb  protocol.proto  pub.py  pyproject.toml  rcfile.txt  readme.md  requirements-dev.txt  requirements.txt  serial_connection.py  simulation_example.mcap  simulator.py  simulator_demo.ipynb  simulator_v2_demo.ipynb  state.py  test.mcap  test.py  trajectory_demo.ipynb  (+2 more)
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: alt_ci.yml  ci.yml  docs.yml  pylint.yaml  pytest.yml
0.1.0/: 404.html  Makefile  index.html  sitemap.xml
0.1.0/dynamics-and-control/: index.html
0.1.0/protocol/: index.html
0.1.0/quickstart/: index.html
0.1.0/search/: search_index.json
0.1.0/syntax-test/: index.html
3.0.0/: 404.html  index.html  objects.inv  sitemap.xml
3.0.0/dynamics/: index.html
3.0.0/dynamics-and-control/: index.html
3.0.0/quickstart/: index.html
3.0.0/search/: search_index.json
3.0.0/tex/: radial_cart_pole.tex
benchmark/nanopb/: nanopb_benchmark.cpp.txt  protocol.pb.c  protocol.pb.h
benchmark/protobuf-c/: protobufc_benchmark.cpp  protocol.pb-c.c  protocol.pb-c.h
cart_pole/: interface.py  util.py
cart_pole/device/: wire_interface.py
cart_pole/simulator/: simulator.py  test_simulator.py
cart_pole/web_view/: collector.py  server.py
cartpole/: __init__.py  __main__.py  common.py  eval.py  log.py  lqr.py  simulator.py
cartpole/actors/: demo.py
cartpole/common/: __init__.py  interface.py  util.py  view.py
cartpole/control/: __init__.py  drake_trajectory.py  lqr.py  model.py  trajectory.py
cartpole/device/: __init__.py  _device.py  brain_controller_pb2.py  controller_pb2.py  device.py  framing.py  (+1 more)
common/: __init__.py  interface.py  system.py  util.py  view.py
control/: calibration.py  drake_trajectory.py  lqr.py  sample.py  trajectory.py
ddpg/: __main__.py  config.yaml  models.py  replay_memory.py  simulation_example.mcap  trainer.py
device/: __init__.py  _device.py  controller_pb2.py  device.py  wire_interface.py
docs/: Makefile  controller_protocol.md  dynamics-and-control.md  dynamics.md  guide.md  index.md  installation.md  lib_fixes.md  max_force.ipynb  model.ipynb  model.py  model_for_phys_pend.ipynb  protocol.md  quickstart.md  sessions.md  syntax-test.md
examples/: ddpg.ipynb  dqn.ipynb  foxglove_log.py  log.py  log_example.py  mcap_log.py  pytorch_simulator_demo.ipynb  pytorch_value_function_approximation.ipynb  simulation.py  simulation_example.mcap  simulation_example.py  test.py
firmware2/: brain_controller.proto  platformio.ini
framing_docs/: documentation.md  protocol.proto
layouts/: default.json  log_example.json
misc/: const_actor.py  debug_session_runner.py  demo_actor.py  lqr_actor.py  new_proto_test.py  oscillating_actor.py  session_helpers.py  session_postprocess.ipynb  simple_server.py
notebooks/: pydrake_simulator_demo.ipynb  pydrake_trajectory_demo.ipynb  pytorch_simulator_demo.ipynb  session_postprocess.ipynb  simulator_demo.ipynb  trajectory_demo.ipynb
operator/: __init__.py  operator.py  serial_connection.py  wire_interface.py
python_client/: TinyFrame.py  brain_controller_pb2.py  pb_tf_example.py
sac/: README.md  replay_buffer.py  requirements.txt  train.py  utils.py
scripts/: build_proto.py  compile_protobuf.py  debug_session_runner.py  update_protobuf.py
sessions/: actor.py  collector.py  main.py  runner.py
simulator/: __init__.py  cart_pole_v0.urdf  simulator.py  system.py  test_simulator.py
simulator_v2/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
simulator_v2/cartpole_torch/: config.py  discreditizer.py  history.py  learning_context.py  state.py  system.py
src/: accelerometer.cpp  accelerometer.h  brain_controller.pb.c  brain_controller.pb.h  encoder.cpp  encoder.h  globals.cpp  globals.h  main.cpp  protocol_processor.cpp  protocol_processor.h  stepper.cpp  stepper.h
tests/: test_controller.py  test_log.py  test_torch_simulator.py
web_view/: collector.py  server.py
(+86 files in other folders)
