[tool.poetry]
name = "cartpole"
version = "0.1.0"
description = "Control study project"
authors = ["simagin.mail@yandex.ru"]
readme = "readme.md"
packages = [
    { include = "cartpole" },
]


[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.0"
numpy = "^1.23.5"
protobuf = "^4.21.9"
pyserial = "^3.5"
varint = "^1.0.2"
dacite = "^1.6.0"
foxglove_websocket = "^0.0.8"
mcap = "^0.0.15"
tqdm = "^4.64.0"
drake = {version = "^1.10.0", optional = true}
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.2.0"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
seaborn = "^0.12.1"

[tool.poetry.extras]
pydrake = ["drake"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
