[tool.poetry]
name = "cartpole"
version = "0.1.0"
description = ""
authors = []
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.0"
numpy = "^1.23.5"
protobuf = "^4.21.9"
pyserial = "^3.5"
varint = "^1.0.2"
dacite = "^1.6.0"
foxglove_websocket = "^0.0.8"
mcap = "^0.0.15"
tqdm = "^4.64.0"
drake = {version = "^1.10.0", optional = true}
pydantic = "^1.10.2"
betterproto = {version = "^2.0.0b6", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.2.0"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
seaborn = "^0.12.1"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.17"
mike = "^1.1.2"
betterproto = {extras = ["compiler"], version = "^2.0.0b6", allow-prereleases = true}
grpcio-tools = "^1.56.0"
platformio = "^6.1.7"

[tool.poetry.extras]
pydrake = ["drake"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
