[tool.poetry]
name = "cartpole"
version = "3.0.0"
license = "MIT"
description = "Control study project"
authors = [
    "Simagin Denis <simagin.mail@yandex.ru>",
    "Andrew Bondarev <AndBondStyle@gmail.com>"
]
repository = "https://github.com/robotics-laboratory/cart-pole"
documentation = "https://cartpole.robotics-lab.ru"
keywords = ["cartpole", "control", "reinforcement learning"]

packages = [
    { include = "cartpole" },
]

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu/"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.10"

casadi = "^3.6"
dacite = "^1.6"
foxglove-websocket = "^0.1"
mcap = "^1.1"
numpy = "^1.26"
pydantic = "^2.3"
protobuf = "^4.21.9"
pyserial = "^3.5"
scipy = "^1.11"
torch = [
    {url="https://download.pytorch.org/whl/cpu/torch-2.0.1-cp310-none-macosx_11_0_arm64.whl", markers="platform_system == 'Darwin' and platform_machine == 'arm64'"},
    {url="https://download.pytorch.org/whl/cpu/torch-2.0.1-cp310-none-macosx_10_9_x86_64.whl", markers="platform_system == 'Darwin' and platform_machine == 'x86_64'"},
    {url="https://download.pytorch.org/whl/torch-2.0.1-cp310-cp310-manylinux2014_aarch64.whl", markers="platform_system == 'Linux' and platform_machine == 'aarch64'"},
    {url="https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp310-cp310-linux_x86_64.whl", markers="platform_system == 'Linux' and platform_machine == 'x86_64'"},
    {url="https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp310-cp310-win_amd64.whl", markers="platform_system == 'Windows' and platform_machine == 'amd64'"}
]
varint = "^1.0.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0"
matplotlib = "^3.8"
mkdocs = "^1.5"
mkdocstrings = { version = "^0.24", extras = ["python"] }
mkdocs-material = "^9.4"
mkdocs-material-extensions = "^1.2"
ruff = "^0.2"
pandas = "^2.1"
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
